# Trading-Platform

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: commonStock.h  commonStockFactory.h  includes.h  limitOrder.h  limitOrderFactory.h  marketDataGenerator.h  marketOrder.h  marketOrderFactory.h  order.h  orderBook.h  orderFactory.h  platformInitializer.h  platformPausedState.h  platformState.h  preferredStock.h  preferredStockFactory.h  signalhandler.h  stock.h  stockFactory.h  trader.h  tradingPlatform.h
src/: commonStock.cpp  commonStockFactory.cpp  limitOrder.cpp  limitOrderFactory.cpp  marketDataGenerator.cpp  marketOrder.cpp  marketOrderfactory.cpp  orderBook.cpp  platformInfo.json  platformInitializer.cpp  platformPausedState.cpp  platformState.json  preferredStock.cpp  preferredStockFactory.cpp  signalhandler.cpp  stockInfo.json  trader.cpp  tradingPlatform.cpp
